Comments for CYB

--- a/form-w-o-battery.html
+++ b/form-w-o-battery.html
@@ -280,7 +280,7 @@ textarea.area.field.w-input::-webkit-scrollbar-corner {
               </div>
             </div>
             
-            <!-- Name Fill out Section -->
+            <!-- Form Fill out Section -->
 
             <div class="slide w-slide">
               <div class="slide-wrapper">
